--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link href="pics/njuguna.png" rel="icon" type="image/png">
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
