Sorts RWD on Tablet and picture cover

--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
   <body>
     <!-- left column -->
       <div class="col-3 profile">
-          <img src="pics/njuguna1.png" alt="njuguna">
-        <h2 class="w3-display-bottomleft w3-container w3-text-teal">Martin Njuguna</h2>
-        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer</p>
-        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Nairobi, KE</p>
-        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>martin.njau@live.com</p>
-        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>0727905402</p>
-        <hr>
-        <b class="teal">Skills</b>
-        <p>Database</p>
-        <p>Web Development</p>
-        <p>Networks</p>
+        <img src="pics/njuguna1.png" alt="njuguna">
+        <h2 class="titles">Martin Njuguna</h2>
+        <div class="col-12 details">
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Nairobi, KE</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>martin.njau@live.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>0727905402</p>
+          <hr>
+          <b class="teal">Skills</b>
+          <p>Database</p>
+          <p>Web Development</p>
+          <p>Networks</p>
 
-        <b class="teal">Languages</b><br>
-        <p>English</p>
-        <p>Kiswahili</p>
+          <b class="teal">Languages</b><br>
+          <p>English</p>
+          <p>Kiswahili</p>
 
-        <b class="teal">Attributes</b><br>
-        <!-- <b>hobbies and interests</b> -->
+          <b class="teal">Attributes</b><br>
+          <!-- <b>hobbies and interests</b> -->
+        </div>
       </div>
       <!-- right top column -->
       <div class="col-9 experince">
