--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="col-12 details">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Nairobi, KE</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>martin.njau@live.com</p>
+          <p class="email"><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>martin.njau@live.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>0727905402</p>
           <hr>
           <b class="teal">Skills</b>
