--- a/index.html
+++ b/index.html
@@ -11,38 +11,46 @@
   <body>
     <!-- left column -->
       <div class="col-3 profile">
-        <img src="pics/njuguna1.png" alt="njuguna">
-        <h2 class="w3-display-bottomleft w3-container w3-text-teal">Martin Njuguna</h2>
+          <img src="pics/njuguna1.png" alt="njuguna">
+          <h2 >Martin Njuguna</h2>
         <div class="details">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>  Developer</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i> Nairobi, KE</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large icon-color"></i>  Developer</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right icon-color"></i> Nairobi, KE</p>
+          <p class="email"><i class="fa fa-envelope fa-fw w3-margin-right icon-color"></i>
             <a href="mailto:martin.njau@live.com?Subject=Hello%20again" target="_top">martin.njau@live.com</a></p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>  0727905402</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right icon-color"></i>  0727905402</p>
           <hr>
-          <b class="teal">Skills</b>
+          <h3 class="icon-color"><i class="fa fa-asterisk fa-fw fa-lg icon-color"></i>  Skills</h3>
           <p>Database</p>
           <p>Web Development</p>
           <p>Networks</p>
 
-          <b class="teal">Languages</b><br>
+          <h3 class="icon-color"><i class="fa fa-language fa-fw fa-lg icon-color"></i>  Languages</h3>
           <p>English</p>
           <p>Kiswahili</p>
 
-          <b class="teal">Attributes</b><br>
+          <h3 class="icon-color"><i class="fa fa-fire fa-fw fa-lg icon-color"></i>  Attributes</h3>
+          <p>Self-motivated</p>
+          <p>Team-Player</p>
+          <p>Creative</p>
+          <p>Honest</p>
+          <p>Assertive</p>
           <!-- <b>hobbies and interests</b> -->
         </div>
       </div>
       <!-- right top column -->
       <div class="col-9 experince">
-        <h1 class="titles">Work experience</h1><br>
+        <!-- <h3 class="icon-color"><i class="fa fa-fire fa-fw fa-lg icon-color"></i>  Attributes</h3> -->
+        <h1 class="titles"><i class="fa fa-suitcase fa-fw fa-2x icon-color"></i> Work experience</h1><br>
           <strong> Database Development/Fly540 Aviation</strong><br>
-          <p class="teal"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i>Sept 2014 - <strong>Current</strong></p>
+          <p class="icon-color"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i> Sept 2014 - <strong>Current</strong></p>
           <p>
             <li>Database management and Front End Development</li>
             <li>Data Editing, Formatting and Importing into the database for the following:
-              <li>Aircraft Scheduled Maintenance</li>
-              <li>Airworthiness Directives(AD) and Service Bulletins(SB)</li></li>
+              <ol>
+                <li>Aircraft Scheduled Maintenance</li>
+                <li>Airworthiness Directives(AD) and Service Bulletins(SB)</li>
+              </ol>
             <li>Data mining from aircraft database for reports development</li>
             <li>Analysis of reports in collaboration with the planning and reliability
               departments to enhance development of acceptable Engines status reports,
@@ -52,7 +60,7 @@
           </p>
 
           <strong>Database Developement/Shear Graphics</strong><br>
-          <p class="teal"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i>Sept 2014 - 2015</p>
+          <p class="icon-color"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i> Sept 2014 - 2015</p>
           <p>
             <li>Database management and Front End Development</li>
             <li>Data mining from aircraft database for reports development</li>
@@ -68,41 +76,47 @@
       </div>
         <!-- right bottom column -->
       <div class="col-9 education">
-        <h1 class="titles">Education</h1><br>
+        <h1 class="titles"><i class="fa fa-certificate fa-fw fa-2x icon-color"></i> Education</h1><br>
         <strong>J.K.U.A.T - BBIT</strong><br>
-        <p class="teal"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i>2016</p>
-        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in
-          deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta
-          ea et odio, unde doloremque repellendus iure, iste.</p>
+        <p class="icon-color"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i> 2016</p>
+        <p>Database Development:
+          <ul>Relational databases</ul>
+          <ul>Scripting (Stored Procedures, Functions)</ul>
+          <ul>Database Administration</ul>
+        </p>
+        <p>Management Systems:
+          <ul>Implemention of structured approach methods to activities in order to achieve
+            laid out objectives.</ul>
+        </p>
+        <p>Front-End Development:
+          <ul>Java, C++, C</ul>
+        </p>
+        <br>
 
         <strong>I.A.T - MCSA</strong><br>
-        <p class="teal"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i>2015</p>
-        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in
-          deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta
-          ea et odio, unde doloremque repellendus iure, iste.</p>
+        <p class="icon-color"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i> 2015</p>
+        <p>Mastery of the primary set of Windows Server 2012 skills required to
+          reduce IT costs and deliver more business value</p>
+        <br>
 
         <strong> N.I.B.S - MOS</strong><br>
-        <p class="teal"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i>2012</strong></p>
-        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in
-          deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta
-          ea et odio, unde doloremque repellendus iure, iste.</p>
+        <p class="icon-color"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i> 2012</strong></p>
+        <p>Microsoft Office Suite:</p>
+        <ul>(Word, Excel, PowerPoint, Outlook, Visio, Publisher)</ul>
+        <br>
 
         <strong>J.K.U.A.T - CCNA</strong><br>
-        <p class="teal"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i>2010</strong></p>
-        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in
-          deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta
-          ea et odio, unde doloremque repellendus iure, iste.</p>
-
-        <strong>Muhoho High School - K.C.S.E</strong><br>
-        <p class="teal"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i>2007</p>
-        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in
-          deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta
-          ea et odio, unde doloremque repellendus iure, iste.</p>
+        <p class="icon-color"><i class="fa fa-calendar fa-fw w3-margin-right w3-large"></i> 2010</strong></p>
+        <p>Study of architecture, structure, functions, components, and
+          models of the Internet and other computer networks.
+        <p>The principles and structure of IP addressing and the fundamentals of
+          Ethernet concepts, media, and operations</p>
       </div>
     </div>
       <!-- footer -->
-      <footer class="col-12">
-        Copyright (c) 2017 Copyright Holder All Rights Reserved.
-      </footer>
+      <div class="col-12 footer">
+        @breakage 2017 <br><br>
+        Copyright Holder All Rights Reserved.
+      </div>
   </body>
 </html>
