--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html>
   <head>
-    <title>Resume</title>
+    <title></Njuguna></title>
     <meta charset="utf-8">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
