Adds the Call me functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
           <p><i class="fa fa-home fa-fw w3-margin-right icon-color"></i> Nairobi, KE</p>
           <p class="email"><i class="fa fa-envelope fa-fw w3-margin-right icon-color"></i>
             <a href="mailto:martin.njau@live.com?Subject=Hello%20again" target="_top">martin.njau@live.com</a></p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right icon-color"></i>  0727905402</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right icon-color"></i>
+            <a href="tel:+254727905402">0727905402</a></p>
           <hr>
           <h3 class="icon-color"><i class="fa fa-asterisk fa-fw fa-lg icon-color"></i>  Skills</h3>
           <p>Database</p>
